# RustVerbalExpressions

./: Cargo.toml  README.md
src/: lib.rs
src/verex/: mod.rs  test.rs
