[package]
name = "verex"
version = "0.2.2"
authors = ["Alexander Popiak <alexander.popiak@gmail.com>"]
description = "This crate provides a Rust implementation of VerbalExpressions in order to build regex strings without knowing the minutiae of regex syntax."
documentation="https://verbalexpressions.github.io/RustVerbalExpressions/verex/"
repository = "https://github.com/VerbalExpressions/RustVerbalExpressions"
readme = "README.md"
keywords = ["regex", "verex", "regex-builder"]
license = "MIT"
edition = "2021"

[dependencies]
regex = "^1.6"
bitflags = "^1.3"
